Fixing styles for long titles and collapsed cells with long titles

--- a/webapp/dashboard.css
+++ b/webapp/dashboard.css
@@ -22,6 +22,8 @@
 .dashboard-cell.collapsed .dashboard-cell-inner {
     padding-left: 1.6em;
     cursor: pointer;
+    /* Don't let long titles run overboard */
+    overflow: hidden;
 }
 
 .dashboard-cell.collapsed:hover .dashboard-cell-inner {
